# comp-4321

./: .gitignore  .gitmodules  CHECKLIST.md  COMP4321 Final Report.md  COMP4321 Phase 1 - Database Design Report.md  COMP4321 Phase 1.docx  INSTALL.md  README.md  pyproject.toml  requirements.txt  tester.html
.github/workflows/: python-package.yml
full_site_test_kit/: Movie - Normal.htm  Movie - Plus.htm  books.htm  news.htm  testpage.htm  ust_cse.htm
full_site_test_kit/Movie/: 1.html  10.html  100.html  101.html  102.html  103.html  104.html  105.html  106.html  107.html  108.html  109.html  11.html  110.html  111.html  112.html  113.html  114.html  115.html  116.html  117.html  118.html  119.html  12.html  120.html  121.html  122.html  123.html  124.html  125.html  126.html  127.html  128.html  129.html  13.html  130.html  131.html  132.html  133.html  134.html  (+260 more)
full_site_test_kit/books/: book1.htm  book2.htm  book3.htm
full_site_test_kit/news/: bbc.htm  bbc1.htm  bbc2.htm  bbc3.htm  cnn.htm  cnn1.htm  cnn2.htm
full_site_test_kit/ust_cse/: PG.htm  UG.htm
src/egod_search/: __init__.py  __main__.py  _build.py  _main.py  _test.py  _util.py  crawl.py  database.py  scheme.py  scheme_types.py  test__util.py  types.py
src/egod_search/crawl/: __init__.py  __main__.py  concurrency.py  crawl.py  main.py  output.py  print.py  test_main.py
src/egod_search/database/: __init__.py  models.py  output.py  scheme.py  test_models.py
src/egod_search/index/: __init__.py  test_transform.py  transform.py
src/egod_search/query/: __init__.py
src/egod_search/res/: Chinook_Sqlite.sql  Chinook_Sqlite.sql.LICENSE.md  Chinook_Sqlite.sql.README.md  create_database.sql  words.txt.LICENSE.md  words.txt.README.md  words_porter_expected.txt
src/egod_search/res/tests/output_summary/: comp4321-hkust.github.io 30.txt  comp4321-hkust.github.io.txt  summary 30.txt  summary 500.txt
src/egod_search/retrieve/: __init__.py  search.py
src/egod_search/scheme/: create_tables.sql
src/egod_search/web/: __main__.py  _debug.py  _search.py  main.py
